overflow of controls fixed in specifications

--- a/frontend/src/theme/utilities/form.scss
+++ b/frontend/src/theme/utilities/form.scss
@@ -15,7 +15,7 @@ div.form-wrapper {
       }
 
       .extended-control {
-        @apply w-max;
+        inline-size: 100%;
       }
 
       .form-heading {
